--- a/package.json
+++ b/package.json
@@ -47,9 +47,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "bugs": {
     "url": "https://github.com/pedrogalhardoo/PDS2_prot_frontend/issues"
   },
-  "homepage": "https://github.com/pedrogalhardoo/PDS2_prot_frontend#readme"
+  "homepage": "."
 }
